Networking/Endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: my-service
subsets:
- addresses:
  - ip: 10.244.0.19
  ports:
  - port: 80
