Networking/Service-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-selector
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
