Networking/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport
spec:
  selector:
    type: publicpod
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
